ui/assets/styles/dark-theme.css
/* ... */
      .overlay-dialogue.modal .overlay-dialogue-controls z-select li {
        display: block;
        padding-left: 5px; }
      .overlay-dialogue.modal .overlay-dialogue-controls .inline-filter li {
        padding-left: 0; }
    .overlay-dialogue.modal > .overlay-close-btn {
      position: relative;
      float: right;
      top: -13px;
      right: -8px; }
  .overlay-dialogue.sticked-to-top {
    top: 50px; }
  .overlay-dialogue.modal-popup {
    max-width: 1024px; }
    .overlay-dialogue.modal-popup.modal-popup-medium {
      min-width: 450px; }
    .overlay-dialogue.modal-popup.modal-popup-small {
      max-width: 450px;
      width: 100%; }
    .overlay-dialogue.modal-popup.modal-popup-static {
      max-width: 700px;
      width: 100%; }
    .overlay-dialogue.modal-popup.modal-popup-preprocessing {
      max-width: 900px;
      width: 100%; }
    .overlay-dialogue.modal-popup.modal-popup-generic {
      min-width: 650px; }
    .overlay-dialogue.modal-popup.modal-popup-fullscreen {
      width: calc(100vw - 40px);
      max-width: calc(100vw - 40px); }
  .overlay-dialogue .hintbox-wrap {
    overflow: auto;
    max-height: 240px;
    max-width: 800px;
    overflow-wrap: break-word; }
  .overlay-dialogue .msg-bad,
  .overlay-dialogue .msg-good,
  .overlay-dialogue .msg-warning {
    position: -webkit-sticky;
    position: sticky;
    top: 0;
    z-index: 4;
    margin: 0 0 10px; }
  .overlay-dialogue .form-grid {
    grid-template-columns: minmax(100px, max-content) auto; }
    .overlay-dialogue .form-grid.form-grid-1-1 {
      grid-template-columns: repeat(2, minmax(100px, max-content) auto); }
    .overlay-dialogue .form-grid.form-grid-3-1 {
      grid-template-columns: minmax(100px, max-content) 3fr max-content auto; }
  .overlay-dialogue .list-table {
    white-space: normal;
    border: 0; }
  .overlay-dialogue .table-paging {
    border: 0;
    border-top: 1px solid #383838; }
  .overlay-dialogue .table-forms-td-right td {
    vertical-align: middle; }
    .overlay-dialogue .table-forms-td-right td label {
      display: block; }
  .overlay-dialogue .dashboard-widget-head {
    margin: -10px -10px 4px; }
  .overlay-dialogue .maps-container {
    max-height: 128px;
    overflow-y: auto;
    margin-left: -10px; }
  .overlay-dialogue .table-forms-second-column {
    float: right;
    line-height: 24px; }

.multilineinput-control {
  display: flex;
  width: 100%; }
  .multilineinput-control input[type=text] {
    overflow: hidden;
    cursor: pointer;
    white-space: nowrap;
    text-overflow: ellipsis;
    border-right: 0;
    width: 100%; }
    .multilineinput-control input[type=text][readonly] {
      background: #383838 !important;
      border-color: #4f4f4f;
      color: #e1e3ed; }
    .multilineinput-control input[type=text].monospace-font {
      padding-top: 1px; }
  .multilineinput-control.editable {
    background-color: #383838 !important;
    border-color: #525252; }
  .multilineinput-control button {
    position: relative;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0; }
    .multilineinput-control button::after {
      background: url("../img/icon-sprite.svg?20200407") no-repeat -47px -478px;
      content: '';
      position: absolute;
      left: 3px;
      top: 4px;
      height: 14px;
      width: 15px; }
    .multilineinput-control button:not([disabled]):not([readonly]) {
      background-color: #383838;
      border-color: #4f4f4f; }
      .multilineinput-control button:not([disabled]):not([readonly]):hover {
        background-color: #414141; }
  .multilineinput-control.multilineinput-readonly input[type=text][readonly] {
    background-color: #2b2b2b !important; }
  .multilineinput-control.multilineinput-disabled input[type=text] {
    cursor: default; }
  .multilineinput-control.multilineinput-disabled button::after {
    opacity: .5; }

.multilineinput-modal {
  min-width: 960px; }
  .multilineinput-modal .multilineinput-container {
    padding: 1px;
    position: relative;
    display: flex;
    overflow: hidden; }
  .multilineinput-modal .multilineinput-line-numbers {
    counter-reset: line;
    overflow: hidden;
    padding: 1px 5px 1px 0;
    position: absolute;
    left: 0;
    top: 0;
    bottom: 0; }
    .multilineinput-modal .multilineinput-line-numbers li {
      color: #737373;
      line-height: 18px;
      text-align: right;
      min-width: 24px; }
      .multilineinput-modal .multilineinput-line-numbers li::before {
        counter-increment: line;
        content: counter(line);
        user-select: none; }
  .multilineinput-modal .multilineinput-label {
    color: #737373;
    line-height: 24px; }
  .multilineinput-modal .multilineinput-textarea {
    flex: 1;
    line-height: 18px;
    resize: none;
    white-space: pre;
    padding: 0 5px;
    z-index: 20; }
    .multilineinput-modal .multilineinput-textarea::-webkit-scrollbar {
      height: 9px; }
  .multilineinput-modal .multilineinput-symbols-remaining {
    color: #737373;
    float: left;
    line-height: 24px; }

.textarea-flexible-container td {
  line-height: 22px; }
  .textarea-flexible-container td.textarea-flexible-parent {
    vertical-align: top; }
  .textarea-flexible-container td button {
    line-height: normal; }

.textarea-flexible {
  display: block;
  min-height: 24px;
  overflow: hidden;
  resize: none;
  word-break: break-all;
  height: 24px;
  line-height: 14px;
  white-space: break-spaces; }

.btn-back-map-container {
  text-align: left;
  position: absolute;
  left: -1px;
  max-width: 100%; }
  .btn-back-map-container a:focus, .btn-back-map-container a:hover {
    outline: none; }
    .btn-back-map-container a:focus .btn-back-map, .btn-back-map-container a:hover .btn-back-map {
      background-color: #768d99;
      border: #768d99 solid 1px; }
/* ... */

