..F....... [ZBX-18975] fixed item value being truncated in item test form
* commit 'b535eb8dc59781742d9181a3456e73c7a58d70a1':
  ..F....... [ZBX-18975] recompiled css
  ..F....... [ZBX-18975] made maxlength attribute optional
  ..F....... [ZBX-18975] made maxlength attribute optional
  .D........ [ZBX-18975] added changelog file
  ..F....... [ZBX-18975] fixed item value being truncated in item test form

(cherry picked from commit 898ea5ed959425dda3a885b86de0f22a4fad1149)
(cherry picked from commit d75bae7de20027bba99e4625b14f457f6d5dd9f6)

--- a/ui/assets/styles/dark-theme.css
+++ b/ui/assets/styles/dark-theme.css
@@ -4412,7 +4412,7 @@ button[disabled], button[disabled]:hover, button[disabled]:active {
     z-index: 20; }
     .multilineinput-modal .multilineinput-textarea::-webkit-scrollbar {
       height: 9px; }
-  .multilineinput-modal .multilineinput-symbols-remaining {
+  .multilineinput-modal .multilineinput-char-count {
     color: #737373;
     float: left;
     line-height: 24px; }
